--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs"
   },
   "dependencies": {
+    "auth0-lock": "^10.14.0",
+    "axios": "^0.16.1",
     "vue": "^2.2.2",
     "vue-router": "^2.3.0"
   },
