--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "auth0-js": "^8.5.0",
     "axios": "^0.16.1",
+    "jwt-decode": "^2.2.0",
     "vue": "^2.2.2",
     "vue-router": "^2.3.0"
   },
