--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "axios": "^0.16.1",
     "jwt-decode": "^2.2.0",
     "vue": "^2.2.2",
-    "vue-router": "^2.3.0"
+    "vue-router": "^2.3.0",
+    "vuex": "^2.3.1"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
