--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.16.1",
     "jwt-decode": "^2.2.0",
     "vue": "^2.2.2",
+    "vue-material": "^0.7.4",
     "vue-router": "^2.3.0",
     "vuex": "^2.3.1"
   },
