--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "auth0-js": "^8.5.0",
     "axios": "^0.16.1",
     "jwt-decode": "^2.2.0",
+    "vee-validate": "^2.0.0-beta.17",
     "vue": "^2.2.2",
     "vue-material": "^0.7.4",
     "vue-router": "^2.3.0",
