--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "private": true,
   "scripts": {
     "dev": "node build/dev-server.js",
-    "start": "node build/dev-server.js",
+    "start": "node server.js",
     "build": "node build/build.js",
+    "heroku-postbuild": "npm install --only=dev --no-shrinkwrap && npm run build",
     "unit": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run",
     "test": "npm run unit",
     "lint": "eslint --ext .js,.vue src test/unit/specs"
@@ -17,6 +18,7 @@
     "axios": "^0.16.1",
     "d3": "^4.10.0",
     "jwt-decode": "^2.2.0",
+    "serve-static": "^1.13.2",
     "vee-validate": "^2.0.0-beta.17",
     "vue": "^2.2.2",
     "vue-material": "^0.7.4",
